# libhdfspp

./: CMakeLists.txt
lib/common/: datatransfer.h
lib/hdfs_test/: jni_helper.cc  jni_helper.h  mini_dfs_cluster.cc
lib/reader/: block_reader.h  remote_block_reader.cc
lib/reader/impl/: remote_block_reader.h
